# Nandadeep-proj

./: .gitignore
observer/: connection.sh  discovery.sh  installation_raspi.sh
server/: CMakeLists.txt  Logger.hpp  SessionManager.cpp  SessionManager.hpp  StreamEngine.cpp  StreamEngine.hpp  VideoStorage.cpp  VideoStorage.hpp  index.html  installation_linux.sh  installation_windows.sh  main.cpp
